--- a/index.html
+++ b/index.html
@@ -1,132 +1,184 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>GESTORÍA GONZÁLEZ - ENMARCADO MÚLTIPLE</title>
+
+<!-- PDF-Lib -->
+<script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+
+<!-- PDF.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+<script>
+  // Configuración del worker de PDF.js
+  pdfjsLib.GlobalWorkerOptions.workerSrc = 
+    'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
+</script>
+
+<style>
+  body { font-family: Arial, sans-serif; background:#f6f8fa; padding:24px; }
+  .card { background:#fff; border-radius:12px; padding:32px; max-width:800px; margin:auto; box-shadow:0 8px 25px rgba(0,0,0,0.12); text-align:center; }
+  h2 { color:#1a237e; margin-bottom:20px; }
+  h3 { margin-bottom:20px; color:#333; }
+  p { line-height:1.6; color:#333; }
+  label { display:block; margin:24px 0 8px; font-weight:bold; font-size:17px; color:#222; }
+  input { padding:14px; font-size:16px; border-radius:8px; border:1px solid #ccc; width:100%; box-sizing:border-box; }
+  button { background:#007bff; color:white; border:none; padding:16px 32px; font-size:18px; font-weight:bold; border-radius:10px; cursor:pointer; margin-top:30px; }
+  button:hover:not(:disabled) { background:#0056b3; }
+  button:disabled { background:#999; cursor:not-allowed; }
+  #status { margin-top:25px; font-weight:bold; font-size:19px; min-height:30px; }
+  #progress { margin-top:10px; color:#555; font-size:15px; }
+  hr { margin:30px 0; }
+</style>
+</head>
+<body>
+
+<div class="card">
+  <h2>GESTORÍA GONZÁLEZ</h2>
+  <h3>Sistema de Enmarcado Automático Múltiple</h3>
+  <p>Selecciona <strong>todas las actas que quieras enmarcar</strong> (puedes seleccionar 1, 10 o 100 de golpe).</p>
+  <p>El marco y el reverso se aplican automáticamente según el estado detectado.</p>
+
+  <label>Actas a enmarcar (múltiples archivos, sin reverso):</label>
+  <input id="baseFiles" type="file" accept="application/pdf" multiple>
+  <button id="mergeBtn">GENERAR TODOS LOS PDFs ENMARCADOS</button>
+
+  <hr>
+
+  <label>Actas a enmarcar y agregar reverso automáticamente:</label>
+  <input id="baseFilesWithReverso" type="file" accept="application/pdf" multiple>
+  <button id="mergeWithReversoBtn">GENERAR PDF CON REVERSO AUTOMÁTICO</button>
+
+  <div id="status">Listo para procesar</div>
+  <div id="progress"></div>
+</div>
+
 <script>
 document.addEventListener("DOMContentLoaded", () => {
 
-// ------------------------- CONFIG -------------------------
-const basePath = "./pdf/"; 
-const marcoFile = "MARCO_ACTA.pdf";
+  const basePath = "./pdf/";
+  const marcoFile = "MARCO_ACTA.pdf";
 
-const estadosValidos = [
-  "AGUASCALIENTES", "BAJA CALIFORNIA", "BAJA CALIFORNIA SUR",
-  "CAMPECHE", "CHIAPAS", "CHIHUAHUA", "CIUDAD DE MEXICO",
-  "COAHUILA", "COLIMA", "DURANGO", "GUANAJUATO", "GUERRERO",
-  "HIDALGO", "JALISCO", "MEXICO", "MICHOACAN", "MORELOS",
-  "NAYARIT", "NUEVO LEON", "OAXACA", "PUEBLA", "QUERETARO",
-  "QUINTANA ROO", "SAN LUIS POTOSI", "SINALOA", "SONORA",
-  "TABASCO", "TAMAULIPAS", "TLAXCALA", "VERACRUZ",
-  "YUCATAN", "ZACATECAS"
-];
+  const estadosValidos = [
+    "AGUASCALIENTES", "BAJA CALIFORNIA", "BAJA CALIFORNIA SUR",
+    "CAMPECHE", "CHIAPAS", "CHIHUAHUA", "CIUDAD DE MEXICO",
+    "COAHUILA", "COLIMA", "DURANGO", "GUANAJUATO", "GUERRERO",
+    "HIDALGO", "JALISCO", "MEXICO", "MICHOACAN", "MORELOS",
+    "NAYARIT", "NUEVO LEON", "OAXACA", "PUEBLA", "QUERETARO",
+    "QUINTANA ROO", "SAN LUIS POTOSI", "SINALOA", "SONORA",
+    "TABASCO", "TAMAULIPAS", "TLAXCALA", "VERACRUZ",
+    "YUCATAN", "ZACATECAS"
+  ];
 
-// ------------------------- DETECCIÓN ESTADO -------------------------
-function detectEstado(text) {
-  const lines = text.toUpperCase().split(/\r?\n/);
-
-  for (let i = 0; i < lines.length - 1; i++) {
-    if (lines[i].includes("ENTIDAD DE REGISTRO")) {
-      const estadoLinea = lines[i + 1].trim();
-      return estadosValidos.find(est => estadoLinea.includes(est)) || null;
+  // ---------------- DETECCIÓN DE ESTADO ----------------
+  function detectEstado(text) {
+    const lines = text.toUpperCase().split(/\r?\n/);
+    for (let i = 0; i < lines.length - 1; i++) {
+      if (lines[i].includes("ENTIDAD DE REGISTRO")) {
+        const estadoLinea = lines[i + 1].trim();
+        return estadosValidos.find(est => estadoLinea.includes(est)) || null;
+      }
     }
-  }
-  return null;
-}
-
-async function extractTextFirstPage(file) {
-  const buffer = await file.arrayBuffer();
-  const pdf = await pdfjsLib.getDocument({ data: buffer }).promise;
-  const page = await pdf.getPage(1);
-  const text = await page.getTextContent();
-  return text.items.map(t => t.str).join("\n");
-}
-
-// ------------------------- FUNCIONES PDF -------------------------
-async function mergePDF(baseBytes) {
-  const { PDFDocument } = PDFLib;
-
-  const marcoBytes = await fetch(basePath + marcoFile).then(r => r.arrayBuffer());
-  const basePdf = await PDFDocument.load(baseBytes);
-  const marcoPdf = await PDFDocument.load(marcoBytes);
-  const result = await PDFDocument.create();
-
-  const [basePage] = await result.copyPages(basePdf, [0]);
-  const [marcoPage] = await result.copyPages(marcoPdf, [0]);
-
-  const { width, height } = basePage.getSize();
-  const page = result.addPage([width, height]);
-
-  page.drawPage(await page.doc.embedPage(marcoPage), { x:0, y:0, width, height });
-  page.drawPage(await page.doc.embedPage(basePage), { x:0, y:0, width, height });
-
-  return result;
-}
-
-async function mergePDFWithReverso(bytes, estado) {
-  const result = await mergePDF(bytes);
-  const revBytes = await fetch(basePath + estado + ".pdf").then(r => r.arrayBuffer());
-  const revPdf = await PDFLib.PDFDocument.load(revBytes);
-  const [revPage] = await result.copyPages(revPdf, [0]);
-  result.addPage(revPage);
-  return result;
-}
-
-async function download(pdf, name) {
-  const bytes = await pdf.save();
-  const url = URL.createObjectURL(new Blob([bytes], { type:"application/pdf" }));
-  const a = document.createElement("a");
-  a.href = url;
-  a.download = name;
-  a.click();
-  URL.revokeObjectURL(url);
-}
-
-// ------------------------- BOTÓN SIN REVERSO -------------------------
-document.getElementById("mergeBtn").addEventListener("click", async () => {
-  const input = document.getElementById("baseFiles");
-  const status = document.getElementById("status");
-
-  if (!input.files.length) return alert("Selecciona al menos un PDF.");
-
-  status.textContent = "Procesando documentos...";
-  let count = 0;
-
-  for (const file of input.files) {
-    const bytes = await file.arrayBuffer();
-    const pdf = await mergePDF(bytes);
-    await download(pdf, file.name.replace(/\.pdf$/i, "") + " - ENMARCADO.pdf");
-    count++;
+    return null;
   }
 
-  status.textContent = `✔ ${count} PDF(s) procesados correctamente.`;
-});
+  async function extractTextFirstPage(file) {
+    const buffer = await file.arrayBuffer();
+    const pdf = await pdfjsLib.getDocument({ data: buffer }).promise;
+    const page = await pdf.getPage(1);
+    const textContent = await page.getTextContent();
+    return textContent.items.map(t => t.str).join("\n");
+  }
 
-// ------------------------- BOTÓN CON REVERSO -------------------------
-document.getElementById("mergeWithReversoBtn").addEventListener("click", async () => {
-  const input = document.getElementById("baseFilesWithReverso");
-  const status = document.getElementById("status");
+  // ---------------- FUNCIONES PDF ----------------
+  async function mergePDF(baseBytes) {
+    const { PDFDocument } = PDFLib;
+    const marcoBytes = await fetch(basePath + marcoFile).then(r => r.arrayBuffer());
+    const basePdf = await PDFDocument.load(baseBytes);
+    const marcoPdf = await PDFDocument.load(marcoBytes);
+    const result = await PDFDocument.create();
 
-  if (!input.files.length) return alert("Selecciona al menos un PDF.");
+    const [basePage] = await result.copyPages(basePdf, [0]);
+    const [marcoPage] = await result.copyPages(marcoPdf, [0]);
+    const { width, height } = basePage.getSize();
+    const page = result.addPage([width, height]);
+    page.drawPage(await page.doc.embedPage(marcoPage), { x:0, y:0, width, height });
+    page.drawPage(await page.doc.embedPage(basePage), { x:0, y:0, width, height });
 
-  status.textContent = "Leyendo información del acta...";
-  let count = 0;
+    return result;
+  }
 
-  for (const file of input.files) {
-    const text = await extractTextFirstPage(file);
-    const estado = detectEstado(text);
+  async function mergePDFWithReverso(baseBytes, estado) {
+    const result = await mergePDF(baseBytes);
+    const revBytes = await fetch(basePath + estado + ".pdf").then(r => r.arrayBuffer());
+    const revPdf = await PDFLib.PDFDocument.load(revBytes);
+    const [revPage] = await result.copyPages(revPdf, [0]);
+    result.addPage(revPage);
+    return result;
+  }
 
-    if (!estado) {
-      alert(`❌ Estado no detectado en: ${file.name}`);
-      continue;
+  async function download(pdf, name) {
+    const bytes = await pdf.save();
+    const url = URL.createObjectURL(new Blob([bytes], { type:"application/pdf" }));
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = name;
+    a.click();
+    URL.revokeObjectURL(url);
+  }
+
+  // ---------------- BOTÓN SIN REVERSO ----------------
+  document.getElementById("mergeBtn").addEventListener("click", async () => {
+    const input = document.getElementById("baseFiles");
+    const status = document.getElementById("status");
+    if (!input.files.length) return alert("Selecciona al menos un PDF.");
+
+    status.textContent = "Procesando documentos...";
+    let count = 0;
+
+    for (const file of input.files) {
+      const bytes = await file.arrayBuffer();
+      const pdf = await mergePDF(bytes);
+      await download(pdf, file.name.replace(/\.pdf$/i, "") + " - ENMARCADO.pdf");
+      count++;
     }
 
-    const bytes = await file.arrayBuffer();
-    const pdf = await mergePDFWithReverso(bytes, estado);
-    await download(pdf, file.name.replace(/\.pdf$/i, "") + " - CON REVERSO.pdf");
-    count++;
-  }
+    status.textContent = `✔ ${count} PDF(s) procesados correctamente.`;
+  });
 
-  status.textContent = `✔ ${count} PDF(s) con reverso procesados.`;
-});
+  // ---------------- BOTÓN CON REVERSO ----------------
+  document.getElementById("mergeWithReversoBtn").addEventListener("click", async () => {
+    const input = document.getElementById("baseFilesWithReverso");
+    const status = document.getElementById("status");
+    if (!input.files.length) return alert("Selecciona al menos un PDF.");
 
-}); // FIN DOMContentLoaded
+    status.textContent = "Leyendo información del acta...";
+    let count = 0;
+
+    for (const file of input.files) {
+      const text = await extractTextFirstPage(file);
+      const estado = detectEstado(text);
+      if (!estado) {
+        alert(`❌ Estado no detectado en: ${file.name}`);
+        continue;
+      }
+
+      const bytes = await file.arrayBuffer();
+      const pdf = await mergePDFWithReverso(bytes, estado);
+      await download(pdf, file.name.replace(/\.pdf$/i, "") + " - CON REVERSO.pdf");
+      count++;
+    }
+
+    status.textContent = `✔ ${count} PDF(s) con reverso procesados.`;
+  });
+
+}); // Fin DOMContentLoaded
 </script>
+
+</body>
+</html>
+
 
 
 
